# WebProtocolPerformance

./: .gitignore  .gitmodules  README.md  test.cpp
bench/: CMakeLists.txt  README.md  plot_results.py  repeat_bench.py  run_bench.py
bench/include/: bench.hpp
bench/out_repeated/: all_runs_flat.csv  summary_stats.csv  summary_stats.json
bench/out_repeated/run_000/: rest_latency.csv  results.csv  results.json  webrtc_latency.csv  ws_latency.csv
bench/out_repeated/run_001/: rest_latency.csv  results.csv  results.json  webrtc_latency.csv  ws_latency.csv
bench/out_repeated/run_002/: rest_latency.csv  results.csv  results.json  webrtc_latency.csv  ws_latency.csv
bench/out_repeated/run_003/: rest_latency.csv  results.csv  results.json  webrtc_latency.csv  ws_latency.csv
bench/out_repeated/run_004/: rest_latency.csv  results.csv  results.json  webrtc_latency.csv  ws_latency.csv
bench/out_repeated/run_005/: rest_latency.csv  results.csv  results.json  webrtc_latency.csv  ws_latency.csv
bench/out_repeated/run_006/: rest_latency.csv  results.csv  results.json  webrtc_latency.csv  ws_latency.csv
bench/out_repeated/run_007/: rest_latency.csv  results.csv  results.json  webrtc_latency.csv  ws_latency.csv
bench/out_repeated/run_008/: rest_latency.csv  results.csv  results.json  webrtc_latency.csv  ws_latency.csv
bench/out_repeated/run_009/: rest_latency.csv  results.csv  results.json  webrtc_latency.csv  ws_latency.csv
bench/out_repeated_smoke/: all_runs_flat.csv  summary_stats.csv  summary_stats.json
bench/out_repeated_smoke/run_000/: rest_latency.csv  results.csv  results.json  webrtc_latency.csv  ws_latency.csv
bench/out_repeated_smoke/run_001/: rest_latency.csv  results.csv  results.json  webrtc_latency.csv  ws_latency.csv
bench/src/: rest_client.cpp  rest_server.cpp  webrtc_client.cpp  webrtc_server.cpp  ws_client.cpp  ws_server.cpp
